# ComfyUI-SaveImageWithMetaData

./: README.jp.md  README.md  __init__.py  embedding.py  pyproject.toml
.github/workflows/: publish.yml
examples/: efficiency-nodes.json  everywhere_prompt_utilities.json  extra_metadata.json  filename_format.json  lora_embedding.json  lora_embedding_vae.json  sd3.json
py/: __init__.py  capture.py  hook.py  trace.py
py/defs/: __init__.py  captures.py  combo.py  formatters.py  hook_definition.py  hooks.py  meta.py  samplers.py  validators.py
py/defs/ext/: ComfyUI-FluxSettingsNode.py  ComfyUI-Miaoshouai-Tagger.py  easyuse_nodes.py  efficiency_nodes.py  rgthree.py  size_from_presets.py
py/nodes/: base.py  node.py
py/utils/: embedding.py  hash.py
